WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
245790
[macOS 13] Share Sheet header displays a generic icon and is missing a title when sharing an image
https://bugs.webkit.org/show_bug.cgi?id=245790
Summary
[macOS 13] Share Sheet header displays a generic icon and is missing a title ...
Aditya Keerthi
Reported
2022-09-28 10:28:56 PDT
rdar://99706364
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2022-09-28 10:40:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/4797
EWS
Comment 2
2022-09-28 16:06:55 PDT
Committed
254976@main
(f0f73dc0e8a5): <
https://commits.webkit.org/254976@main
> Reviewed commits have been landed. Closing PR #4797 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug