Cherry-pick f0f73dc0e8a5. rdar://problem/99706364

[macOS 13] Share Sheet header displays a generic icon and is missing a title when sharing an image
    https://bugs.webkit.org/show_bug.cgi?id=245790
    rdar://99706364

    Reviewed by Tim Horton.

    On macOS 13, the Share Sheet has a header representing the content being
    shared. WebKit is currently not providing any preview information when sharing
    an image, resulting in a generic icon and missing title in the header.

    To fix, provide an `NSPreviewRepresentingActivityItem` to the Share Sheet when
    an image is being shared.

    * Source/WTF/wtf/PlatformHave.h:
    * Source/WebCore/en.lproj/Localizable.strings:
    * Source/WebKit/Shared/WebHitTestResultData.cpp:
    (WebKit::WebHitTestResultData::WebHitTestResultData):

    Use the "title" attribute to provide a title for the preview. If a title is
    missing, use the alt text instead.

    (WebKit::WebHitTestResultData::encode const):
    (WebKit::WebHitTestResultData::decode):
    * Source/WebKit/Shared/WebHitTestResultData.h:
    * Source/WebKit/UIProcess/mac/WebContextMenuProxyMac.mm:
    (WebKit::WebContextMenuProxyMac::getShareMenuItem):

    If no title is available from the web content, fallback to using a generic title.

    Canonical link: https://commits.webkit.org/254976@main

Canonical link: https://commits.webkit.org/252432.660@safari-7614-branch