Source/WebKit/Shared/WebHitTestResultData.h
@@ -63,6 +63,7 @@ struct WebHitTestResultData {
 
     String lookupText;
     String toolTipText;
+    String imageText;
     RefPtr<SharedMemory> imageSharedMemory;
     uint64_t imageSize;
     RefPtr<ShareableBitmap> imageBitmap;
